--- a/views/addPhoto.pug
+++ b/views/addPhoto.pug
@@ -51,51 +51,56 @@ html(lang='en')
             a.nav-link(href='#')
               | Home
               span.sr-only (current)
-          li.nav-item.float-right
-            a.nav-link.float-right(href='/patrons') Patrons
           li.nav-item
-            a.nav-link.float-right(href='/map') Map
+            a.nav-link.float-right(href='/addChurch') Add Church
           li.nav-item
-            a.nav-link.float-right(href='/auth') Register
+            a.nav-link.float-right(href='/allChurches') All Churches
+          li.nav-item
+            a.nav-link.float-right(href='/upload') Add Image
           li.nav-item.float-right
-            a.nav-link.float-right(href='/auth/login') Log In
+            a.nav-link.float-right(href='/auth/logout') Log Out
         // Links
       // Collapsible content
     // /.Navbar
-    // Main Navigation
-    header
-      .view.jarallax(data-jarallax='{"speed": 0.2}', style="background-image: url('images/kaysvillePres.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;")
-        .mask.rgba-white-light
-          .container.flex-center.text-center
-            .row.mt-5
-              .col-md-12.wow.fadeIn.mb-3
-                h1.display-3.mb-2.wow.fadeInDown(data-wow-delay='0.3s')
-                  | Historic Utah Churches
-                  a.indigo-text.font-weight-bold
-                h5.text-uppercase.mb-3.mt-1.font-weight-bold.wow.fadeIn(data-wow-delay='0.4s') Discover the history, see the beauty, and experience these amazing buildings
-      .container
-        // Grid row
+    .container
+      h3.text-center
+        | Add Church
+        i.fa.fa-group.ml-3(aria-hidden='true')
+      form(method='POST', action='/addPhoto', enctype='multipart/form-data')
+        // Material input
         .row
-          // Grid column
-          .col-md-12.text-center.mb-3
-            h1.font-weight-bold.light-blue-text.my-3 Become a Patron
-            p(align='justify')
-              | One of the best way you can help and contribute is by becoming a patron of your project.  This is a way to be involved and help others experience these amazing buildings.
-          // Grid column
-        // Grid row  https://mdbootstrap.com/img/Photos/Others/food2.jpg
-      .view.jarallax.intro-2(data-jarallax='{"speed": 0.2}', style="background-image: url('images/torre.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;")
-        .mask.rgba-purple-slight
-          .container.h-100.d-flex.align-items-center.d-flex.justify-content-center
-            .row.mt-5
-              .col-md-12.wow.fadeIn.mb-3
-                .intro-info-content.text-center
-                  h1.display-1.white-text.mb-2.wow.fadeInDown(data-wow-delay='0.3s') Become a Patron
-                  h4.mb-3.mt-1.white-text.font-weight-bold.wow.fadeIn(data-wow-delay='0.4s')
-      h1.text-center List of Current Patrons
-      ul.list-group
-        each username in usernames
-          li.list-group-item #{username.name}
-    // Main Navigation
+          .col-6
+            .md-form
+              input#title.form-control(type='text', name='title')
+              label(for='title') Title
+          .col-6
+            .md-form
+              input#description.form-control(type='text', name='history')
+              label(for='description') History
+        .row
+          .col-6
+            .md-form
+              input#year.form-control(type='text', name='year')
+              label(for='year') Year built
+          .col-6
+            .md-form
+              input#denomination.form-control(type='text', name='denomination')
+              label(for='denomination') Denomination
+        .row
+          .col-6
+            .md-form
+              input#city.form-control(type='text', name='city')
+              label(for='city') City
+          .col-6
+            .md-form
+              input#county.form-control(type='text', name='county')
+              label(for='county') County
+        .row
+          .col-12
+            .md-form
+              input#photo.form-control(type='file', name='photo')
+              label(for='photo') Photo
+        input.form-control.primary-color.text-white(type='submit')
     // Footer
     footer.page-footer.font-small.mdb-color.pt-4
       // Footer Links
