--- a/views/register.pug
+++ b/views/register.pug
@@ -54,6 +54,8 @@ html(lang='en')
           li.nav-item
             a.nav-link.float-right(href='/patrons') Patrons
           li.nav-item
+            a.nav-link.float-right(href='/map') Map
+          li.nav-item
             a.nav-link.float-right(href='/auth') Register
           li.nav-item.float-right
             a.nav-link.float-right(href='/auth/login') Log In
