--- a/views/map.pug
+++ b/views/map.pug
@@ -67,7 +67,7 @@ html(lang='en')
     // /.Navbar
     // Main Navigation
     header
-      .view.jarallax(data-jarallax='{"speed": 0.2}', style="background-image: url('images/salinaPres.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;")
+      .view.jarallax(data-jarallax='{"speed": 0.2}', style="background-image: url('images/salinaPres.JPG'); background-repeat: no-repeat; background-size: cover; background-position: center center;")
         .mask.rgba-white-light
           .container.flex-center.text-center
             .row.mt-5
